<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
    >
        <TextView
            android:id="@+id/title"
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="22dp"
        />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/euphoria"
        />
        <TextView
            android:id="@+id/sinopsis"
            android:text="@string/sinopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
        >
        </TextView>
        <Button
            android:id="@+id/btn_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ver más datos"
            android:layout_gravity="center"
            android:layout_margin="10dp"
        />
        <LinearLayout
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:visibility="gone"
        >
            <TextView
                android:id="@+id/datos"
                android:text="@string/datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
            />

            <TextView
                android:id="@+id/seasons"
                android:text="@string/seasons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="3dp"
            />
            <TextView
                android:id="@+id/episodes"
                android:text="@string/episodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="3dp"
            />
            <TextView
                android:id="@+id/second_season"
                android:text="@string/second_season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="12dp"
            />

            <TextView
                android:id="@+id/characters"
                android:text="@string/characters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="12dp"
            />

            <TextView
                android:id="@+id/rue"
                android:text="@string/rue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
            />
            <ImageView
                android:layout_width="310dp"
                android:layout_height="180dp"
                android:src="@drawable/rue"
                android:layout_marginBottom="25dp"
            />

            <TextView
                android:id="@+id/lexi"
                android:text="@string/lexi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
            />
            <ImageView
                android:layout_width="310dp"
                android:layout_height="180dp"
                android:src="@drawable/lexi"
                android:layout_marginBottom="25dp"
            />

            <TextView
                android:id="@+id/maddy"
                android:text="@string/maddy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
            />
            <ImageView
                android:layout_width="310dp"
                android:layout_height="180dp"
                android:src="@drawable/maddy"
                android:layout_marginBottom="25dp"
            />

            <TextView
                android:id="@+id/nate"
                android:text="@string/nate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
            />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="180dp"
                android:src="@drawable/nate"
                android:layout_marginBottom="25dp"
            />

            <TextView
                android:id="@+id/kat"
                android:text="@string/kat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
            />
            <ImageView
                android:layout_width="310dp"
                android:layout_height="180dp"
                android:src="@drawable/kat"
                android:layout_marginBottom="25dp"
            />

            <TextView
                android:id="@+id/jules"
                android:text="@string/jules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
            />
            <ImageView
                android:layout_width="270dp"
                android:layout_height="180dp"
                android:src="@drawable/jules"
                android:layout_marginBottom="25dp"
            />

            <TextView
                android:id="@+id/cris"
                android:text="@string/cris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
            />
            <ImageView
                android:layout_width="310dp"
                android:layout_height="180dp"
                android:src="@drawable/cris"
                android:layout_marginBottom="25dp"
            />

            <TextView
                android:id="@+id/cassie"
                android:text="@string/cassie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
            />
            <ImageView
                android:layout_width="290dp"
                android:layout_height="180dp"
                android:src="@drawable/cassie"
                android:layout_marginBottom="25dp"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>